# src/routes/class_subject.js
@@ -1,6 +1,7 @@
-const { class_subject } = require("../controllers/class_subject")
+const { class_subject,getClass_subject } = require("../controllers/class_subject")
 
 
 module.exports = (app) => {
     app.post("/class_subject",class_subject)
+    app.get("/class_subject/get",getClass_subject)
 }
